syntax = "proto3";

package graviflow.api.v1;

import "api/types/v1/version.proto";
import "api/types/v1/resource.proto";

message PutResourceRequest {

    graviflow.api.types.v1.Resource resource = 1;

}

message PutResourceResponse {

    graviflow.api.types.v1.Version version = 1;

}

message DropResourcesRequest {

    // Resource IDs to drop
    repeated string resource_ids = 1;
    string namespace = 2;

}

message DropResourcesResponse {

}

message DropBeforeResourcesRequest {

    // Resource IDs to drop
    int64 before = 1;
    string namespace = 2;

}

message DropBeforeResourcesResponse {

    int32 dropped_count = 1;

}

message ListResourcesRequest {

    int64 updated_since = 1;
    string namespace = 2;
    string nonce = 3;

}

message ListResourcesResponse {

    repeated graviflow.api.types.v1.Resource updated_resources = 1;
    repeated graviflow.api.types.v1.Resource dropped_resources = 2;
    string nonce = 3;

}

service ResourceStore {
    rpc Put(PutResourceRequest) returns(PutResourceResponse) {}
    rpc Drop(DropResourcesRequest) returns(DropResourcesResponse) {}
    rpc DropBefore(DropBeforeResourcesRequest) returns(DropBeforeResourcesResponse) {}
    rpc List(stream ListResourcesRequest) returns(stream ListResourcesResponse) {}
}